--- a/ackermann_larger_than_universe.ipynb
+++ b/ackermann_larger_than_universe.ipynb
@@ -13,17 +13,17 @@
    "metadata": {},
    "source": [
     "# Ackermann Function: Larger than the Universe\n",
-    "## Definition\n",
-    "### The Ackermann function is a _recursive_ function in *Computability Theory*. The Ackermann function, named after **Wilhelm Ackermann**, is one of the simplest and earliest-discovered examples of a _total computable_ function that is not _primitive recursive_ [[1]](https://en.wikipedia.org/wiki/Ackermann_function).\n",
+    "### Definition\n",
+    "The Ackermann function is a _recursive_ function in *Computability Theory*. The Ackermann function, named after **Wilhelm Ackermann**, is one of the simplest and earliest-discovered examples of a _total computable_ function that is not _primitive recursive_ [[1]](https://en.wikipedia.org/wiki/Ackermann_function).\n",
     "\n",
     "$\\\n",
-    "\\begin{equation}\n",
+    "\\begin{equation*}\n",
     "    A(m,n) = \\begin{cases}\n",
     "        1 & n+1, & if \\ \\ \\ m=0; \\\\\n",
     "        2 & A(m-1, 1), & if \\ \\ \\ m>0 \\ \\ \\ and \\ \\ \\ n=0; \\\\\n",
     "        3 & A(m-1, A(m,n-1)), & if \\ \\ \\ m>0 \\ \\ \\ and \\ \\ \\ n>0; \\\\\n",
     "    \\end{cases}\n",
-    "\\end{equation}\n",
+    "\\end{equation*}\n",
     "$\n"
    ]
   },
@@ -46,9 +46,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### At first this might seem uninteresting, you give the Ackermann function small values and it's just one more recursive function. Nothing special... right?\n",
+    "At first this might seem uninteresting, you give the Ackermann function small values and it's just one more recursive function. Nothing special... right?\n",
     "\n",
-    "### Let's start defining an array with these first results: A(i,j), i,j=\\[0, 3]. That is, from A(0, 0) to A(3, 3)."
+    "Let's start defining an array with these first results: A(i,j), i,j=\\[0, 3]. That is, from A(0, 0) to A(3, 3)."
    ]
   },
   {
@@ -100,9 +100,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ok, totally normal up to here. Now, with 'm' more bigger than 3, is when everything gets ... cosmic.\n",
+    "Ok, totally normal up to here. Now, with 'm' more bigger than 3, is when everything gets ... cosmic.\n",
     "\n",
-    "### Let's say m=4, and let's go one by one:"
+    "Let's say m=4, and let's go one by one:"
    ]
   },
   {
@@ -127,9 +127,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Yeah, 13. But if we **TRY** the next one: A(4,1), Python throws an error: _\"RecursionError: maximum recursion depth exceeded in comparison\"_.\n",
+    "Yeah, 13. But if we **TRY** the next one: A(4,1), Python throws an error: _\"RecursionError: maximum recursion depth exceeded in comparison\"_.\n",
     "\n",
-    "#### The real answer is **65533**, it can be calculated in other language with more _stacking_ capability. But that's ALSO NOTHING compared to A(4, 2)."
+    "\n",
+    "The real answer is **65533**, it can be calculated in other language with more _stacking_ capability. But that's ALSO NOTHING compared to A(4, 2)."
    ]
   },
   {
@@ -158,25 +159,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "RecursionError",
-     "evalue": "maximum recursion depth exceeded in comparison",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRecursionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-282588c23e5f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mAckermann\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-1-47411d59a31a>\u001b[0m in \u001b[0;36mAckermann\u001b[1;34m(m, n)\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mAckermann\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mAckermann\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mAckermann\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "... last 1 frames repeated, from the frame below ...\n",
-      "\u001b[1;32m<ipython-input-1-47411d59a31a>\u001b[0m in \u001b[0;36mAckermann\u001b[1;34m(m, n)\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mAckermann\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mAckermann\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mAckermann\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mRecursionError\u001b[0m: maximum recursion depth exceeded in comparison"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Not even try to run this line\n",
     "Ackermann(4, 2)"
    ]
   },
@@ -184,32 +171,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A(4,2) is greater than the number of particles that make up the universe raised to the power 200. Amazing.\n",
+    "A(4,2) is greater than the number of particles that make up the universe raised to the power 200. Amazing.\n",
     "\n",
-    "### A little more: The result of A(5,2) cannot be written since _it would not fit in the physical Universe_. In general, below row 4 it is no longer possible to write all the digits of the result of the Ackermann's function.\n",
+    "A little more: The result of A(5,2) cannot be written since _it would not fit in the physical Universe_. In general, below row 4 it is no longer possible to write all the digits of the result of the Ackermann's function.\n",
     "\n",
     "$\\\n",
-    "\\begin{equation}\n",
+    "\\begin{equation*}\n",
     "A(4,0) = (2 \\uparrow \\uparrow 3) - 3 = 2^{2^2} - 3 = 2^4 - 3 = 13 \\\\\n",
     "A(4,1) = (2 \\uparrow \\uparrow 4) - 3 = 2^{2^{2^2}} - 3 = 2^{16} - 3 = 65533 \\\\\n",
     "A(4,2) = (2 \\uparrow \\uparrow 5) - 3 = 2^{2^{2^{2^2}}} - 3 = 2^{65536} - 3 \\\\\n",
-    "... \\\\\n",
+    "\\text{...} \\\\\n",
     "A(5,2) = Something \\ \\ F***ing \\ \\ BIG \\\\\n",
     "\\\\\n",
-    "... \\\\\n",
+    "\\text{...} \\\\\n",
     "A(n,m) = Please \\ stop\n",
-    "\\end{equation}\n",
+    "\\end{equation*}\n",
     "$\n",
     "\n",
-    "### And all of this with base numbers that you can count using the fingers of one hand. It continues to grow immeasurably for higher values for n and m."
+    "And all of this with base numbers that you can count using the fingers of one hand. It continues to grow immeasurably for higher values for n and m."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## This is all I wanted to share on this Jupyter Notebook. I hope you have a damn good day.\n",
-    "## PS: Yeah, Graham's Number is even bigger... please don't say it and let me enjoy."
+    "### This is all I wanted to share on this Jupyter Notebook. I hope you have a damn good day.\n",
+    "### PS: Yeah, Graham's Number is even bigger... please don't say it and let me enjoy."
    ]
   }
  ],
