Another try to fix Github's visualization with a different one on VSC

--- a/ackermann_larger_than_universe.ipynb
+++ b/ackermann_larger_than_universe.ipynb
@@ -177,13 +177,32 @@
     "\n",
     "$\\\n",
     "\\begin{equation*}\n",
-    "A(4,0) = (2 \\uparrow \\uparrow 3) - 3 = 2^{2^2} - 3 = 2^4 - 3 = 13 \\\\\n",
+    "A(4,0) = (2 \\uparrow \\uparrow 3) - 3 = 2^{2^2} - 3 = 2^4 - 3 = 13\n",
+    "\\end{equation*}\n",
+    "$\n",
+    "\n",
+    "$\\\n",
+    "\\begin{equation*}\n",
     "A(4,1) = (2 \\uparrow \\uparrow 4) - 3 = 2^{2^{2^2}} - 3 = 2^{16} - 3 = 65533 \\\\\n",
+    "\\end{equation*}\n",
+    "$\n",
+    "\n",
+    "$\\\n",
+    "\\begin{equation*}\n",
     "A(4,2) = (2 \\uparrow \\uparrow 5) - 3 = 2^{2^{2^{2^2}}} - 3 = 2^{65536} - 3 \\\\\n",
-    "... \\\\\n",
+    "\\end{equation*}\n",
+    "$\n",
+    "...\n",
+    "\n",
+    "$\\\n",
+    "\\begin{equation*}\n",
     "A(5,2) = Something \\ \\ F***ing \\ \\ BIG \\\\\n",
-    "\\\\\n",
-    "... \\\\\n",
+    "\\end{equation*}\n",
+    "$\n",
+    "...\n",
+    "\n",
+    "$\\\n",
+    "\\begin{equation*}\n",
     "A(n,m) = Please \\ stop\n",
     "\\end{equation*}\n",
     "$\n",
