--- a/ackermann_larger_than_universe.ipynb
+++ b/ackermann_larger_than_universe.ipynb
@@ -171,9 +171,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A(4,2) is greater than the number of particles that make up the universe raised to the power 200. Amazing.\n",
+    "### A(4,2) is greater than the number of particles that make up the universe raised to the power 200. Amazing.\n",
     "\n",
-    "A little more: The result of A(5,2) cannot be written since _it would not fit in the physical Universe_. In general, below row 4 it is no longer possible to write all the digits of the result of the Ackermann's function.\n",
+    "### A little more: The result of A(5,2) cannot be written since _it would not fit in the physical Universe_. In general, below row 4 it is no longer possible to write all the digits of the result of the Ackermann's function.\n",
     "\n",
     "$\\\n",
     "\\begin{equation*}\n",
@@ -192,6 +192,7 @@
     "A(4,2) = (2 \\uparrow \\uparrow 5) - 3 = 2^{2^{2^{2^2}}} - 3 = 2^{65536} - 3 \\\\\n",
     "\\end{equation*}\n",
     "$\n",
+    "\n",
     "...\n",
     "\n",
     "$\\\n",
@@ -199,6 +200,7 @@
     "A(5,2) = Something \\ \\ F***ing \\ \\ BIG \\\\\n",
     "\\end{equation*}\n",
     "$\n",
+    "\n",
     "...\n",
     "\n",
     "$\\\n",
