Added Mixed Congruential Generator

--- a/ackermann_larger_than_universe.ipynb
+++ b/ackermann_larger_than_universe.ipynb
@@ -19,9 +19,9 @@
     "$\\\n",
     "\\begin{equation*}\n",
     "    A(m,n) = \\begin{cases}\n",
-    "        1 & n+1, & if \\ \\ \\ m=0; \\\\\n",
-    "        2 & A(m-1, 1), & if \\ \\ \\ m>0 \\ \\ \\ and \\ \\ \\ n=0; \\\\\n",
-    "        3 & A(m-1, A(m,n-1)), & if \\ \\ \\ m>0 \\ \\ \\ and \\ \\ \\ n>0; \\\\\n",
+    "        n+1, & if \\ \\ \\ m=0; \\\\\n",
+    "        A(m-1, 1), & if \\ \\ \\ m>0 \\ \\ \\ and \\ \\ \\ n=0; \\\\\n",
+    "        A(m-1, A(m,n-1)), & if \\ \\ \\ m>0 \\ \\ \\ and \\ \\ \\ n>0; \\\\\n",
     "    \\end{cases}\n",
     "\\end{equation*}\n",
     "$\n"
