Remade cell unfairly deleted

--- a/pseudorandom_generator_congruential.ipynb
+++ b/pseudorandom_generator_congruential.ipynb
@@ -12,6 +12,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Pseudorandom Numbers Generator\n",
+    "### Linear Congruential Method\n",
+    "\n",
+    "$\\\n",
+    "\\begin{equation*}\n",
+    "X_n = (A \\ X_{n-1} + C) \\mod M\n",
+    "\\end{equation*}\n",
+    "$\n",
+    "\n",
+    "$\\\n",
+    "\\begin{equation*}\n",
+    "    \\begin{cases}\n",
+    "        0 < M \\\\\n",
+    "        0 < A < M \\\\\n",
+    "        0 \\leq C < M\n",
+    "    \\end{cases}\n",
+    "\\end{equation*}\n",
+    "$\n",
+    "\n",
+    "Where M (\"modulus\"), A (\"mutiplier\") and C (\"increment\") are arbitrary integers, but it is recommended that they be selected in such a way as to give us an apparently uniform distribution and can overcome randomness studies.\n",
+    "\n",
+    "If C = 0 this method is called _Multiplicative Congruential Method_, otherwise it is called _Mixed Congruential Method_.\n",
+    "\n",
+    "I will use:\n",
+    "- M: The largest 32-bit prime\n",
+    "- A: Large odd 30-bit number\n",
+    "- C: 0 (for multiplicative), and later: A - 42 (for mixed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We need to use a \"seed\" X0 for the pseudorandom generator, this number can be calculated througth a chaotic physical phenomena in order to be a \"practically\" random seed.\n",
     "\n",
     "I will use any value for now.\n",
